@@ -42,7 +42,7 @@
         xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul"
         ondialogaccept="onAccept()">
   <script src="password.js"/>
-  <description control="password" id="description" value="&description;"/>
+  <description control="password" id="description" value=""/>
   <vbox flex="1">
     <textbox id="password" type="password"/>
     <checkbox id="save_password" label="&check_save_password;" />
